force-app/main/default/objects/Cart_Item__c/Cart_Item__c.object-meta.xml
<CustomObject>
    <description
  >Individual line items within a shopping cart. Each record represents a product added to the cart with quantity, pricing, and calculated totals. Links to the parent Cart__c record and the associated Product2 record. Essential for ENOS e-commerce cart management and order processing.</description>
    <label>Cart Item</label>
    <nameField>
        <displayFormat>ITEM-{0000000}</displayFormat>
        <label>Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>