force-app/main/default/objects/Cart_Item__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <label>Cart</label>
    <referenceTo>Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>

    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>